[gd_scene load_steps=16 format=3 uid="uid://e5p36iavtsuc"]

[ext_resource type="Script" path="res://scenes/characters/overworld/scr_bird.gd" id="1_8xof1"]
[ext_resource type="Texture2D" uid="uid://kpxort4yhw7v" path="res://sprites/characters/overworld/spr_birds.png" id="2_2dony"]
[ext_resource type="AudioStream" uid="uid://d0hdnl64at3ls" path="res://sounds/snd_birdflap.ogg" id="3_ojjhb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ke3ye"]
atlas = ExtResource("2_2dony")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tra1h"]
atlas = ExtResource("2_2dony")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jup1v"]
atlas = ExtResource("2_2dony")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4cew"]
atlas = ExtResource("2_2dony")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0ycv"]
atlas = ExtResource("2_2dony")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_owubg"]
atlas = ExtResource("2_2dony")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0i47"]
atlas = ExtResource("2_2dony")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxq8o"]
atlas = ExtResource("2_2dony")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntaoa"]
atlas = ExtResource("2_2dony")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqm5t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke3ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tra1h")
}],
"loop": true,
"name": &"fly",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jup1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4cew")
}],
"loop": true,
"name": &"peck",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0ycv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owubg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0i47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owubg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0ycv")
}],
"loop": true,
"name": &"skitter",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxq8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntaoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxq8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxq8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxq8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxq8o")
}],
"loop": true,
"name": &"stand",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j0c5e"]
radius = 32.1403

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xu875"]
streams_count = 1
random_volume_offset_db = 2.8
stream_0/stream = ExtResource("3_ojjhb")
stream_0/weight = 1.0

[node name="Bird" type="Node2D" groups=["birds"]]
script = ExtResource("1_8xof1")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-8, -15)
sprite_frames = SubResource("SpriteFrames_qqm5t")
animation = &"fly"
frame_progress = 0.802245
centered = false

[node name="BehaviourTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="VisibilityNotifier" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(0, 0, 1, 0.431373)
position = Vector2(0, -4)
scale = Vector2(1, 1.2)

[node name="DisturbanceArea" type="Area2D" parent="."]
modulate = Color(0.721569, 0.831373, 1, 0.145098)
collision_layer = 0
collision_mask = 10
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DisturbanceArea"]
shape = SubResource("CircleShape2D_j0c5e")

[node name="CollisionTest" type="RayCast2D" parent="."]
hit_from_inside = true

[node name="FlapSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_xu875")
max_distance = 200.0
panning_strength = 1.35
area_mask = 0
